# agents_schema

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SPEC.md  alation-setup.md  atlan-setup.md  collibra-setup.md  cube-setup.md  datahub-setup.md  dbt-semantic-setup.md  dbt-setup.md  looker-setup.md  memory-setup.md  metabase-setup.md  omni-setup.md  openmetadata-setup.md  osi-setup.md  powerbi-setup.md  pyproject.toml  sigma-setup.md  tableau-setup.md  warehouse-credentials.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/: CODEOWNERS
.github/workflows/: agents-schema-alation.yml  agents-schema-atlan.yml  agents-schema-collibra.yml  agents-schema-cube.yml  agents-schema-datahub.yml  agents-schema-dbt-semantic.yml  agents-schema-dbt.yml  agents-schema-looker.yml  agents-schema-memory.yml  agents-schema-metabase.yml  agents-schema-omni.yml  agents-schema-openmetadata.yml  agents-schema-osi.yml  agents-schema-powerbi.yml  agents-schema-sigma.yml  agents-schema-skills.yml  agents-schema-snowflake-semantic.yml  agents-schema-tableau.yml  publish-pypi.yml
assets/: agents-schema-overview.dot
examples/providers/: README.md
examples/providers/notes_on/: README.md  SPEC.md  notes.yml  pyproject.toml
examples/providers/notes_on/sql/: context_views.sql  root_entries.sql  tables.sql
examples/providers/notes_on/src/agents_schema_notes_on/: __init__.py  cli.py  provider.py
examples/providers/notes_on/tests/: test_provider.py
examples/warehouse-skills/: revenue.md
examples/workflows/: alation.yml  atlan.yml  collibra.yml  cube.yml  customer-dbt-looker.yml  customer-dbt.yml  datahub.yml  dbt-looker-osi.yml  dbt-looker.yml  dbt-semantic.yml  dbt-with-parse.yml  dbt.yml  looker.yml  metabase.yml  omni.yml  openmetadata.yml  osi.yml  powerbi.yml  skills.yml  tableau.yml
proposals/: agent-schema-views.md  memory-provider.md
src/agents_schema/: __init__.py  __main__.py  cli.py  (+26 more)
tests/: test_agents_schema_writer.py  test_cli.py  test_connector_packaging.py  test_connector_root.py  test_dbt_profiles.py  test_destinations.py  test_memory.py  test_metadata_connectors.py  test_omni.py  test_osi.py  test_plugin_marketplace.py  test_root.py  test_sigma.py  test_skills.py  test_views.py
(+43 files in other folders)
