[project]
name = "agents-schema"
version = "0.0.10"
description = "Populate an in-warehouse agents.* schema from dbt manifests, OSI YAML, LookML, and markdown skills."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Fivetran", email = "opensource@fivetran.com" }]
keywords = ["dbt", "osi", "lookml", "snowflake", "databricks", "bigquery", "ai", "agents", "semantic-layer", "metadata"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "cryptography>=3.1.0",
    "databricks-sql-connector>=3.0.0,<5",
    "google-cloud-bigquery>=3.0.0",
    "jsonschema>=4.0",
    "pyyaml>=6.0",
    "snowflake-connector-python>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/dbt-labs/agents_schema"
Repository = "https://github.com/dbt-labs/agents_schema"
Issues = "https://github.com/dbt-labs/agents_schema/issues"

[project.scripts]
agents-schema = "agents_schema.cli:main"
agents-schema-dbt-adapter-package = "agents_schema.cli:dbt_adapter_package_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents_schema"]
